k8s/backend-deployment.yaml
###############
#   Services  #
###############
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
    tier: backend
  ports:
    - protocol: TCP
      name: http
      port: 3001
      targetPort: 3001
    - protocol: TCP
      name: grpc
      port: 3011
      targetPort: 3011
---
apiVersion: v1
kind: Service
metadata:
  name: bulletin-board-service
spec:
  selector:
    app: bulletin-board-service
    tier: backend
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
---
###############
# Deployments #
###############
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  selector:
    matchLabels:
      app: auth-service
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-service
        tier: backend
    spec:
      containers:
        - name: auth-service
          image: "ghcr.io/flo0807/hsfl-master-ai-cloud-engineering/auth-service:main"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
            - name: grpc
              containerPort: 3011
          volumeMounts:
            # name must match the volume name below
            - name: jwt-volume
              mountPath: /jwt-volume
              readOnly: true
      volumes:
        - name: jwt-volume
          secret:
            secretName: jwt-private-key
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulletin-board-service
spec:
  selector:
    matchLabels:
      app: bulletin-board-service
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: bulletin-board-service
        tier: backend
    spec:
      containers:
        - name: bulletin-board-service
          image: "ghcr.io/flo0807/hsfl-master-ai-cloud-engineering/bulletin-board-service:main"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3002
---
###############
#  Networking #
###############
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth-service
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /bulletin-board
            pathType: Prefix
            backend:
              service:
                name: bulletin-board-service
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 3000
